--- a/build.gradle
+++ b/build.gradle
@@ -8,3 +8,11 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        maven("https://naver.jfrog.io/artifactory/maven/")
+    }
+}
