--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             </intent-filter>
         </activity>
         <meta-data
-            android:name="com.naver.maps.map.7cnd218mj4"
+            android:name="com.naver.maps.map.CLIENT_ID"
             android:value="7cnd218mj4"/>
     </application>
 
